worked on account tabs

--- a/src/Components/form/password/PasswordTextInput.css
+++ b/src/Components/form/password/PasswordTextInput.css
@@ -1,68 +1,91 @@
-
-
-
 .text-input-container2 {
   display: flex;
-  border-radius: 1.4rem ;
-  border: 0rem solid #17654F ;
+  border-radius: 1.4rem;
+  border: 0rem solid #17654f;
   height: 5rem;
-  width: 40.2rem ;
+  width: 39.2rem;
   /* padding: 1.4rem !important; */
-  background-color: #CCE1DB ;
-  stroke-width: 0.1rem ;
-  margin-top: 0.5rem ;
-  transition-duration: 250ms ;
-  transition-timing-function: ease-in-out ;
+  background-color: #cce1db;
+  stroke-width: 0.1rem;
+  margin-top: 0.5rem;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
 
   position: relative;
+}
 
-} 
-
-.pass-text-input{
-  border-radius: 1.4rem ;
-  border: 0.1rem solid #17654F ;
-  height: 5rem ;
-  width: 40.2rem ;
-  padding: 1.4rem ;
+.pass-text-input {
+  border-radius: 1.4rem;
+  border: 0.1rem solid #17654f;
+  height: 5rem;
+  width: 40.2rem;
+  padding: 1.4rem;
   background-color: transparent;
-  stroke-width: 0.1rem ;
+  stroke-width: 0.1rem;
   outline: none;
- 
-  transition-duration: 250ms ;
-  transition-timing-function: ease-in-out ;
+
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
   padding-right: 3.5rem;
 }
 
-.toggle-btn2{
-position:absolute;
- right: 1rem;
- top:34%;
- width: 2rem;
- background-color: transparent;
-    border:none;
+.toggle-btn2 {
+  position: absolute;
+  right: 1rem;
+  top: 34%;
+  width: 2rem;
+  background-color: transparent;
+  border: none;
+}
+
+.toggle-btn2 .icon {
+  font-size: 1.5rem;
+}
+
+.pass-text-input:hover,
+.pass-text-input:active {
+  background-color: #b2cfc7 !important;
+  border-color: #17654f !important;
+}
+
+.pass-text-input:focus {
+  background-color: #e8f7f3 !important;
+  border-color: #17654f !important;
+}
+
+.label-text-style {
+  font-weight: 400;
+  font-size: 1.6rem;
+  color: black;
+}
+
+@media (max-width: 1550px) {
+  .text-input-container2 {
+    height: 4.5rem !important;
+    width: 36.2rem !important;
+  }
+  .pass-text-input {
+    height: 4.5rem !important;
+    width: 36.2rem !important;
+  }
+}
+
+
+@media (max-width: 1425px) {
+  .text-input-container2 {
+    height: 4.5rem !important;
+    width: 33.2rem !important;
+  }
+
+}
+
+@media (max-width: 1335px) {
+  .text-input-container2 {
+    height: 4.2rem !important;
+    width: 30.2rem !important;
+  }
+
 }
 
 
 
-.toggle-btn2 .icon{
-    font-size: 1.5rem;
-}
-
-
-
-.pass-text-input:hover, .pass-text-input:active{
-    background-color: #B2CFC7 !important;
-    border-color: #17654F !important;
-}
-
-
-.pass-text-input:focus{
-    background-color: #E8F7F3 !important;
-    border-color: #17654F !important;
-}
-
-.label-text-style{
-    font-weight: 400;
-    font-size: 1.6rem;
-    color:black;
-}
