--- a/src/Pages/StaffAccount/CreateStaffAccount/CreateStaffAccount.css
+++ b/src/Pages/StaffAccount/CreateStaffAccount/CreateStaffAccount.css
@@ -1,16 +1,31 @@
+.ct-form-container{
+  height: 85vh;
+
+}
+
 .ct-staff-form {
   background-color: transparent;
    padding: 0rem;
+  max-width: 1495px;
+  margin: auto;
+
+  /* filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.5)); */
+  /* box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.5); */
+
+
 }
 
 .ct-staff-form-con1 {
-  background-color: #ffffff;
   border-radius: 0.8rem;
   padding: 3.3rem;
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
+  background-color: #ffffff;
+
+  
 }
+
 
 .personal-info-sec {
   display: grid;
@@ -43,10 +58,11 @@
   color: red;
 }
 
-.form-section1 {
+.account .form-section1 {
   display: flex;
   flex-direction: column;
-  gap: 1.4rem;
+  gap: 1.8rem;
+
 }
 
 .new-row-btn-container-st h3 {
@@ -56,7 +72,7 @@
 .new-row-btn-container-st {
   display: flex;
   justify-content: space-between;
-  border-bottom: 0.1rem solid black;
+  border-bottom: 0.1rem solid rgba(112, 128, 144, 0.5);
   padding: 1rem 0rem;
 }
 
@@ -81,6 +97,107 @@
 .new-row-btn-container-st button:hover {
   background-color: #d6e3e0;
 }
+
+.rm-h3-ln{
+  border:0px !important;
+}
+
+.personal-info-select{
+  display: flex;
+  flex-direction: column;
+  gap:0.8rem;
+
+  div{
+    font-weight: 400;
+    font-size: 1.6rem;
+  }
+}
+
+.account-create-btn{
+  display: flex;
+  justify-content: end;
+  gap:1.2rem;
+  padding-top: 2rem;
+}
+.account-create-btn button{
+  padding: 1rem 1.8rem;
+  border-radius: 0.8rem;
+  border: 0.1rem solid #17654F;
+  width: 20.8rem;
+  height: 4.5rem;
+  cursor: pointer;
+  transition-property: background-color, color;
+  transition-timing-function: ease-in-out;
+  transition-duration: 250ms;
+  font-size: 1.6rem;
+  font-weight: 400;
+  
+}
+
+.account-create-btn .btn-cancel{
+  background-color: #fff;
+  color: #003627;
+}
+
+.account-create-btn .btn-cancel:hover{
+  background-color: #D6E3E0;
+}
+
+.account-create-btn .btn-create{
+  background-color: #17654F;
+  color: white;
+}
+
+.account-create-btn .btn-create:hover{
+  background-color: #03563F;
+}
+
 /* form{
     background-color: green;
 } */
+
+
+
+
+@media (max-width:1550px) {
+ .ct-staff-title{
+    background:red;
+    font-size: 50px;
+   
+  }
+  
+}
+
+
+@media (max-width:1188px) {
+.personal-info-sec {
+  grid-template-columns: 1fr  1fr;
+  row-gap: 2.5rem;
+  /* background-color: red; */
+}
+
+}
+
+@media (max-width:892px) {
+  .ct-staff-form {
+  background-color: transparent;
+   padding: 0rem;
+  max-width: 495px;
+  margin: auto;
+
+  /* filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.5)); */
+  /* box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.5); */
+
+
+}
+.personal-info-sec {
+  grid-template-columns:  1fr;
+  /* justify-content: center;
+  align-items: center;
+  margin: auto;
+  border: 1px solid green;
+  row-gap: 2.5rem; */
+  /* background-color: red; */
+}
+
+}
