--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -34,8 +34,8 @@
 .green-side .TextBox {
   width: 100%;
   height: 20%;
-  margin-top: 1rem;
-  margin-left: 2rem;
+  margin-top: rem;
+  margin-left: 5rem;
 }
 .green-side .Images {
   width: 100%;
@@ -43,31 +43,39 @@
 }
 
 .blurred-box {
-  width: 91%;
-  height: 64%;
+  width: 100%;
+  height: 69%;
   position: relative;
-  top: 38%;
+  top: 42%;
+  left: -3rem;
   border-radius: 0.3rem;
 }
 .blurred-box img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 80%;
+  height: 90%;
+  margin-top: -9.3rem;
+ 
+  margin-left: 20rem;
+  object-fit:initial
 }
 .man-box {
-  width: 80%;
-  height: 85%;
+
+  width: 56%;
+  height: 90rem;
   z-index: 3;
   position: relative;
-  top: -48.8%;
+  top: -88%;
   padding: 0;
   margin: 0;
+  
+  /* border: #ff0000 solid 2rem; */
 }
 .man-box img {
   /* display: none; */
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  margin-top: -3rem;
+  /* object-fit: fill; */
 }
 .text-on-green {
   width: 80%;
@@ -76,19 +84,19 @@
   min-height: 160px;
   text-align: left;
   padding: 5.5rem 3rem;
-  margin-top: 3.4rem;
-  display: relative;
+  margin-top: 4rem;
+  margin-left: 2rem;
+  /* display: relative; */
   line-height: 1;
   display: flex;
   flex-direction: column;
-
   /* outline: 1px solid red; */
   z-index: 2;
   /* padding: 6rem 1rem 1rem 1rem; */
 }
 .text-on-green h1 {
   font-family: "Poppins", sans-serif;
-  font-size: clamp(20px, 6.6rem, 70px);
+  font-size: clamp(15px, 6.6rem, 65px);
   font-weight: 150;
   font-style: normal;
   margin-bottom: 0%;
@@ -128,13 +136,14 @@
 }
 .text-on-green pre {
   font-family: "Poppins", sans-serif;
-  font-size: 2.2rem;
+  font-size: 2.1rem;
   font-weight: 120;
   font-style: normal;
   padding: 2.5rem 0 0 0;
   margin: 0px;
   line-height: 1.3;
   white-space: normal;
+  margin-left: 12rem;
   /* display: relative;
   top: -27rem; */
 }
