--- a/src/Pages/Auth/Register.css
+++ b/src/Pages/Auth/Register.css
@@ -74,4 +74,31 @@
   border-radius: 4px;
   box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
   margin: 0 auto;
+  position: relative;
+}
+
+/* CLOSE BUTTON */
+.close {
+  position: absolute;
+  right: 3rem;
+  top: 3rem;
+  font: 50;
+  color: white;
+  width: 3rem;
+  height: 3rem;
+  background-color: rgb(0, 0, 0);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.close h1 {
+  font-size: 1.22em;
+}  
+.close:hover {
+  background-color: gray;
+  color: var(--clr-white);
 }
