--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -52,14 +52,13 @@
 }
 .blurred-box img {
   width: 80%;
-  height: 90%;
+  height: 96%;
   margin-top: -9.3rem;
- 
+
   margin-left: 20rem;
-  object-fit:initial
+  object-fit: initial;
 }
 .man-box {
-
   width: 56%;
   height: 90rem;
   z-index: 3;
@@ -67,7 +66,7 @@
   top: -88%;
   padding: 0;
   margin: 0;
-  
+
   /* border: #ff0000 solid 2rem; */
 }
 .man-box img {
@@ -175,6 +174,8 @@
 }
 
 .radio-button label {
+  background-color: transparent;
+  outline: none;
   padding-left: 30px;
   cursor: pointer;
   position: relative;
@@ -184,42 +185,41 @@
 
 .radio-button label::before {
   content: "";
-  width: 15px;
-  height: 15px;
+  width: 10px;
+  height: 10px;
   border: 2px solid #ccc;
   border-radius: 50%;
   position: absolute;
   left: 0;
   top: 50%;
   transform: translateY(-50%);
+  background-color: #fff; 
 }
-/* .radio-button input[type="radio"]:checked + label::before {
-  border-color: var(--main-theme);
-  background-color: var(--main-theme);
-  box-shadow: inset 0 0 0 3px #fff;
-} */
+
 input[type="radio"]:checked + label::before {
-  /* border-color: var(--main-theme); */
-  /* background-color: var(--main-theme); */
   box-shadow: inset 0 0 0 3px #fff;
 }
 
-/* .radio-button input[type="radio"]:checked  label::after {
-  content: "";
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  position: absolute;
-  left: 4px;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: #fff;
-  display: none;
-} */
+
+.radio-button input[type="radio"]:focus + label {
+  outline: none;
+  box-shadow: none;
+  background-color: transparent;
+}
+.radio-button label,
+.radio-button label:focus,
+.radio-button label:focus-visible,
+.radio-button input[type="radio"]:focus + label,
+.radio-button input[type="radio"]:checked + label {
+  background: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+  border: none !important;
+}
 
 
 /* line-and-text */
-.line-box{
+.line-box {
   width: 100%;
   display: flex;
   align-items: center;
@@ -234,12 +234,11 @@ input[type="radio"]:checked + label::before {
   text-align: center;
   margin-top: 5rem;
   margin-bottom: 5rem;
-  
 }
 .line-and-text::before,
 .line-and-text::after {
   content: "";
-  
+
   flex: 1;
   border-bottom: 1px solid var(--primary-blue-black);
 }
@@ -273,7 +272,7 @@ input[type="radio"]:checked + label::before {
   font-size: 9rem;
 }
 
-.input-box:hover{
+.input-box:hover {
   box-shadow: 2px 1px 5px var(--clr-green);
   background-color: transparent;
   color: black;
@@ -287,7 +286,7 @@ input[type="radio"]:checked + label::before {
   font-size: 1.4rem;
 }
 .input-box input::placeholder {
-  color: var(--main-theme)
+  color: var(--main-theme);
 }
 .input-fields .login_email-box {
   display: flex;
@@ -299,33 +298,32 @@ input[type="radio"]:checked + label::before {
   border: none;
   margin-left: -14px;
 }
-.input-password-box-1{
+.input-password-box-1 {
   align-items: center;
   justify-items: center;
   justify-content: center;
 }
-.input-password-box-1 input{
- width: 90%;
+.input-password-box-1 input {
+  width: 90%;
 }
-.input-password-box-1 button{
+.input-password-box-1 button {
   background-color: transparent;
   border: none;
   align-items: center;
   justify-items: center;
   text-align: center;
 }
-.input-password-box-1 button svg{
+.input-password-box-1 button svg {
   color: rgb(82, 82, 82);
   width: 20px;
   height: 20px;
-
 }
 .input-box input:focus {
   outline: none;
   border: none;
   background: transparent;
 }
-.button-and-sign-up{
+.button-and-sign-up {
   margin-top: -5.5rem;
   display: column;
   align-items: center;
@@ -345,7 +343,7 @@ input[type="radio"]:checked + label::before {
   color: var(--clr-white);
   cursor: pointer;
 }
-.button-and-sign-up button:hover{
+.button-and-sign-up button:hover {
   /* background-color: rgba(23,101, 79, 0.8); */
   background-color: var(--dark-green);
   height: 6rem;
@@ -355,9 +353,8 @@ input[type="radio"]:checked + label::before {
   /* color: var(--background-clr); */
   /* border: solid 1px var(--clr-white); */
   box-shadow: 2px 1px 5px var(--main-theme);
-  
 }
-.button-and-sign-up button:active{
+.button-and-sign-up button:active {
   background-color: var(--main-theme);
   height: 6rem;
   font-size: 2rem;
@@ -385,21 +382,20 @@ input[type="radio"]:checked + label::before {
 .sign-up span a:hover {
   font-weight: 700;
   color: var(--dark-green);
-  text-decoration:underline;
+  text-decoration: underline;
   cursor: pointer;
 }
-.remember-me{
+.remember-me {
   width: 100%;
   display: flex;
   justify-content: flex-end;
   padding-right: 2.1rem;
 }
-.remember-me p{
+.remember-me p {
   color: gray;
   font-size: larger;
-  cursor:pointer;
+  cursor: pointer;
 }
-
 
 /* //MEDIA QUERY */
 @media screen and (max-width: 976px) {
@@ -416,9 +412,8 @@ input[type="radio"]:checked + label::before {
     display: flex;
     flex-direction: column;
     z-index: 2;
-  }v
-
-  .text-on-green h1 {
+  }
+  v .text-on-green h1 {
     font-size: 1.1rem !important;
     font-weight: 500 !important;
     margin: 0 !important;
@@ -451,11 +446,20 @@ input[type="radio"]:checked + label::before {
 }
 
 /* ANIMATIONS */
-@keyframes typing{
-  from { width :0}
-  t0 {width: 100%}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  t0 {
+    width: 100%;
+  }
 }
-@keyframes blink-caret{
-  from, to { border-color: transparent }
-  50% { border-color: var(--background-clr)}
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: var(--background-clr);
+  }
 }
