--- a/src/Components/datePicker/CustomDatePicker.css
+++ b/src/Components/datePicker/CustomDatePicker.css
@@ -3,7 +3,7 @@
 .p-calendar {
   width: 100%;
   height: 3.8rem;
-  max-width: 38.9rem;
+  max-width: 50rem;
 }
 
 .p-datepicker {
@@ -83,9 +83,10 @@
   padding: 0.5rem 1rem;
   font-size: 14px;
   border: 1px solid #ccc;
-  border-radius: 4px 0 0 4px; /* Only round left corners */
+  border-radius: 8px 0 0 8px; /* Only round left corners */
   outline: none !important;
-  border: none;
+  border: 1px solid #979595;
+
 
 }
 
@@ -256,4 +257,3 @@
 
     
 }
-
