--- a/src/Pages/COD/Cod.module.css
+++ b/src/Pages/COD/Cod.module.css
@@ -23,19 +23,19 @@
 }
 .Outercontainertwo{
  background-color:var(--clr-white); 
-     padding: 1rem;
+     padding: 0.8rem;
     width: 100%;
     height: 100px;
     border-radius: 8px;
-     overflow: hidden;
+    
      margin-top: 1.5rem;
      display: flex;
      justify-content: space-around;
 }
 
  .detailstitle{
-    display: block;
-    font-weight: bold;
+    
+    font-weight: 600;
     font-size: 1.8rem;
     margin-bottom: 1rem;
   }
@@ -54,7 +54,7 @@
  .OutercontainerRight{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     gap: 2rem;
 
  }
@@ -110,23 +110,7 @@
   border-color: var(--main-theme);
   
 }
-.verticalButton{
-   background-color:var(--main-theme);
-  color: var(--clr-white);
-  border: 1px solid #e5e7eb;
-  border-bottom-left-radius: 1rem;
-  border-top-left-radius: 1rem;
-  border-bottom-right-radius: none;
-  border-top-right-radius: none;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-   width: 7.5rem;
-     height: 280px;
-  padding: 0.8rem;
-  margin-top: 0.5rem;
-}
+
 .verticalButton:hover{
    background-color: #054231;
   border-color: var(--main-theme);
@@ -212,10 +196,15 @@
 }
 
 .statusControl label {
-     display: inline-block;
      text-align: left;
-    font-weight: 600;
-    font-size: 1.3rem;
+    font-weight: 500;
+    font-size: 1.6rem;
+}
+
+.statusControl{
+  display: flex;
+  flex-direction: column;
+  gap:7px;
 }
 
 /* Style the select element */
@@ -231,7 +220,7 @@
   background-repeat: no-repeat;
   background-position: right 1rem center;
   background-size: 3rem;
-   width: 550px;
+   /* width: 550px; */
     border-radius: 1rem;
     border: 1px solid #ccc;
 }
@@ -242,11 +231,16 @@
   color: #333;
 }
 
-.statusControl select option:hover {
-  background-color: var(--main-theme) !important;
+.statusControl delv-status-selector option:hover {
+  /* background-color: var(--main-theme) !important; */
+  background-color: red !important;
   color: white !important;
 }
-.statusControl select option:active{
+
+
+
+.statusControl select option:active, 
+.statusControl select option:checked {
   background-color: #054231;
 }
 
@@ -258,17 +252,142 @@
 .remarks{
     display: flex;
     flex-direction: column;
+    gap:8px;
+   
 }
 .remarks label{
- display: inline-block;
+ /* display: inline-block; */
      /* text-align: left; */
     font-weight: 500;
-    font-size: 1.3rem;
+    font-size: 1.6rem;
 }
-.remarks input{
- width: 400px;
-    height: 45px;
-    border-radius: 1rem;
-    border: 1px solid #ccc;
-    padding: 1rem;
+
+
+.filed1{
+  display: flex;
+  justify-content: space-between;
+  grid-template-columns: 1fr 1fr 0.1fr;
+  gap:2rem;
+  background-color: white;
+  padding:1rem 0rem 1rem 1rem ;
+  position: relative;
+  /* transition: all;
+  transition-timing-function: ease-in-out;
+  transition-duration: 450ms; */
+
 }
+
+
+.filed1_in1{
+
+  display: flex;
+  flex-direction: column;
+  width: 72.2rem;
+}
+
+.filed1_in1 textarea{
+  max-width: 60.2rem;
+  max-height: 31rem;
+  height: 28rem;
+
+  resize: none;
+  border: 1px solid #979595;
+  border-radius: 0.8rem;
+  
+}
+
+.filed1_in1 textarea:focus{
+  border: 1px solid var(--main-theme);
+  outline: none;
+
+}
+
+.filed1_in2_con1{
+  display: flex;
+  flex-direction: column;
+  gap:7px;
+}
+
+.filed1_in2_con1 label{
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+
+.verticalButton{
+   background-color:var(--main-theme);
+  color: var(--clr-white);
+  border: 1px solid #e5e7eb;
+  border-bottom-left-radius: 1rem;
+  border-top-left-radius: 1rem;
+  border-bottom-right-radius: none;
+  border-top-right-radius: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+   width: 7.5rem;
+     height: 280px;
+  padding: 0.8rem;
+  margin-top: 0.5rem;
+}
+
+.showTabe_st {
+  transition: all 400ms ease-in-out; 
+  width: 100%;
+  position: absolute;
+  right: 0;
+  opacity: 1;
+  visibility: visible; 
+}
+
+.dontShowTb_st {
+  transition: all 400ms ease-in-out; 
+  position: absolute;
+  right: -100%; 
+  width: 100%; 
+  opacity: 0;
+  visibility: hidden; 
+  pointer-events: none;
+}
+
+
+
+.result_con{
+  background-color: white;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap:2rem;
+  padding:2rem;
+  border-radius: 8px;
+  margin-top: 5rem;
+}
+
+.result_con_field1{
+  display: flex;
+  flex-direction: column;
+  gap:8px;
+  width: 98%;
+
+}
+
+.result_field_label{
+  font-size: 1.6rem;
+  font-weight: 500;
+
+}
+
+.result_field_value{
+  border:1px solid #EAEBEE;
+  padding-left: 2rem;
+  /* width: 50rem; */
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  
+  font-size: 1.6rem;
+  font-weight: 300;
+border-radius: 8px;
+}
+
+
