--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,23 @@ html {
 ul{
   list-style-type:none;
 }
+
+
+/* For Chrome, Safari, Edge */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: none !important; /* Match your bg color */
+  -webkit-text-fill-color: none !important; /* Text color */
+  background-color: transparent !important;
+  transition: background-color 5000s ease-in-out 0s !important; /* Prevent flickering */
+}
+
+/* For Firefox */
+input:-moz-autofill,
+input:-moz-autofill:hover,
+input:-moz-autofill:focus {
+  background-color: transparent !important;
+  
+}
