--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,27 @@ input:-moz-autofill:focus {
   background-color: transparent !important;
   
 }
+
+.parent-container{
+  position: relative;
+}
+.network-offline{
+  background-color: red;
+  height: 5rem;
+  width: 45rem;
+  position: absolute;
+  top:0px;
+  left: 50%;
+  transform: translate(-50%,50%);
+  z-index: 1000;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 1.4rem;
+  letter-spacing: 1px;
+  border-radius: 4px;
+  transition: all 350ms ease-in-out;
+  box-shadow: 0px 0px 5px 5px red;
+}
