--- a/src/Pages/VendorAccount/PendingAccount/PendingAccount.css
+++ b/src/Pages/VendorAccount/PendingAccount/PendingAccount.css
@@ -66,3 +66,11 @@
     color:#000;
     margin-bottom: 1rem;
 }
+
+
+.vd-pending-headers{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem 0rem;
+}
