--- a/src/Modals/ModalComponents/SignupCard.css
+++ b/src/Modals/ModalComponents/SignupCard.css
@@ -14,7 +14,7 @@
 }
 .modal-background .register-modal-card {
   width: 46rem;
-  /* max-width: 48rem; */
+  max-width: 48rem;
   height: auto;
   border-radius: 15px;
   background-color: white;
@@ -41,7 +41,6 @@
   border-radius: 6px;
   display: flex;
   align-items: center;
- /* align-content: center; */
   gap: 0.9rem;
   padding: 1.3rem;
   transition: background-color 0.2s ease;
@@ -59,7 +58,6 @@
   color: var(--main-theme);
 }
 .register-modal-button p {
-  padding-top: 10px;
   font-size: 2.1rem;
   font-weight: 500;
   color: var(--main-theme);
