--- a/src/Layouts/HomeLayout.css
+++ b/src/Layouts/HomeLayout.css
@@ -182,6 +182,10 @@
   align-items: center;
   justify-content: space-between;
   background-color: #fff;
+  cursor: pointer;
+}
+.user-card:hover{
+  /* background: linear-gradient(90deg,rgba(49, 181, 49, 1) ); */
 }
 
 .user-card .text {
