--- a/src/Pages/COD/Cod.module.css
+++ b/src/Pages/COD/Cod.module.css
@@ -1,14 +1,14 @@
-.overview {
-  color: var(--clr-black);
+.overview{
+    color: var(--clr-black);
     font-size: 2em;
     margin-left: 1rem;
     font-weight: bold;
 }
 
-.overviewtext {
-   font-size: 10px;
+.overviewtext{
+    font-size: 14px;
     margin-left: 0.9rem;
-      margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 .Outercontainer{
      background-color:var(--clr-white); 
@@ -53,7 +53,7 @@
 
  .OutercontainerRight{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     gap: 2rem;
 
@@ -195,7 +195,7 @@
   background-color: #054231;
 }
 
-.statusControl label {
+/* .statusControl label {
      text-align: left;
     font-weight: 500;
     font-size: 1.6rem;
@@ -205,7 +205,7 @@
   display: flex;
   flex-direction: column;
   gap:7px;
-}
+} */
 
 /* Style the select element */
 .statusControl select {
