--- a/src/UserProfile/UserProfile.module.css
+++ b/src/UserProfile/UserProfile.module.css
@@ -28,6 +28,11 @@
     background-color: var(--clr-white);
     border: 1px solid var(--main-theme);
 }
+.top-row .buttons .white:hover{
+    color: var(--clr-white);
+    background-color: var(--main-theme);
+    border: 1px solid var(--main-theme);
+}
 
 .top-row .buttons .green{
     color: var(--clr-white);
@@ -40,4 +45,65 @@
     border-radius:.8rem;
     padding: 2.3rem;
     height: 56rem;
+}
+.display-picture-area{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1.5rem;
+}
+.display-picture-area .dp-side-button button{
+   width: 21rem;
+   height: 4rem;
+   padding: .7rem;
+   border-radius: .5rem;
+   font-size: 1.2em;
+   cursor: pointer;
+    color: var(--main-theme);
+    background-color: var(--clr-white);
+    border: .8px solid var(--main-theme);
+}
+/* Display picture area */
+.dp{
+    width: 28rem;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1.5rem;
+}
+.dp .names-and-credentials{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: -1px;
+}
+.dp .names-and-credentials h2{
+    font-size: 2.2rem;
+    font-weight: 600;
+    color: var(--clr-black);
+    font-weight: 800;
+}
+.dp .names-and-credentials h3{
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: var(--clr-black);
+    margin-bottom: 0.2rem;
+}
+.dp .img{
+    width: 10rem;
+    height: 8rem;
+    border-radius: 50%;
+    background-color: var(--clr-white);
+    overflow: hidden;
+    margin-left: 10px;
+    margin-top: 10px;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+.dp .img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
