--- a/src/UserProfile/UserProfile.module.css
+++ b/src/UserProfile/UserProfile.module.css
@@ -29,14 +29,19 @@
     border: 1px solid var(--main-theme);
 }
 .top-row .buttons .white:hover{
-    color: var(--clr-white);
-    background-color: var(--main-theme);
+    color: var(--main-theme);
+    background-color: #17654f20;
     border: 1px solid var(--main-theme);
 }
 
 .top-row .buttons .green{
     color: var(--clr-white);
     background-color: var(--main-theme);
+    border: 2px solid var(--main-theme);
+}
+.top-row .buttons .green:hover{
+    color: var(--main-theme);
+    background-color: #17654f20;
     border: 2px solid var(--main-theme);
 }
 
@@ -52,20 +57,36 @@
     align-items: center;
     margin-bottom: 1.5rem;
 }
-.display-picture-area .dp-side-button button{
+.display-picture-area .dp-side-button{
    width: 21rem;
    height: 4rem;
    padding: .7rem;
+   padding-top: 1.5rem;
    border-radius: .5rem;
    font-size: 1.2em;
    cursor: pointer;
     color: var(--main-theme);
     background-color: var(--clr-white);
     border: .8px solid var(--main-theme);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
 }
+.display-picture-area .dp-side-button img{
+    width: 18px;
+    height: 18px;
+    margin-right: 3px; 
+}
+.display-picture-area .dp-side-button:hover{
+    color: var(--clr-white);
+    background-color: #17654f20;
+    border: 1px solid var(--main-theme);
+}
+
 /* Display picture area */
 .dp{
-    width: 28rem;
+    width: auto;
     height: auto;
     display: flex;
     align-items: center;
@@ -93,17 +114,92 @@
 }
 .dp .img{
     width: 10rem;
-    height: 8rem;
+    height: 10rem;
     border-radius: 50%;
     background-color: var(--clr-white);
     overflow: hidden;
-    margin-left: 10px;
+    margin-left: 0px;
     margin-top: 10px;
-    border: 4px solid rgba(0, 0, 0, 0.1);
+    border: 4px solid #CDD4DB;
     overflow: hidden;
+    position: relative;
+}
+.dp .gray-circle{
+    position: absolute;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    background-color: #CDD4DB;
+    top: 25rem;
+    left: 39rem;
+    z-index: 2;
+    overflow: hidden;
+    object-fit:cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.dp .gray-circle img{
+    width: 1.5rem;
+    height: 1.3rem;
 }
 .dp .img img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
+
+hr{
+    border-radius: 5px;
+    background-color: black;
+    color: black;
+}
+
+/* Profile texts */
+/* names-and-credentials .text{
+  margin-top: -4em;
+}
+  */
+
+.names-and-credentials .text{
+    width: auto;
+    height: 80%;
+    /* background-color: yellow; */
+    margin-bottom: -0.8em;
+    line-height: 1;
+    margin-top: 1em;
+}
+.names-and-credentials .text h2{
+   margin-bottom: 3px;
+   font-weight: 700;
+   font-size: xx-large;
+}
+.names-and-credentials .text h3{
+   margin-bottom: 3px;
+   font-weight: 400;
+   font-size: large;
+}
+.names-and-credentials .text .credential{
+    width: auto;
+    max-width: 14em;
+    height: 2em;
+    padding: 5px;
+    border-radius: 4px;
+    background-color:  #0ea47a40;
+    display: flex;
+    justify-content: center;
+    color: var(--main-theme);
+    border: .4px solid var(--main-theme-gray);
+    /* align-items: center; */
+}
+.names-and-credentials .text .credential img{
+    width: 1.1rem;
+    height: 1.1rem;
+    margin-left: 0.5rem;
+}
+
+/* .names-and-credentials h2{
+    margin-bottom: -2em;
+} */
