working on dashboard and add orders

--- a/src/Components/dateRangePicker/CustomDateRangePicker.css
+++ b/src/Components/dateRangePicker/CustomDateRangePicker.css
@@ -1,7 +1,16 @@
+._modal_overlay_lm9mi_35{
+  background-color: transparent;
+ 
+}
+
+.rdrDateRangeWrapper{
+  /* background-color: red; */
+}
 
 
 	.rdrCalendarWrapper{
     /* background-color: red; */
+
   }
 
   .rdrDateDisplayWrapper{
