--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -1,16 +1,60 @@
-.tableContainerOuter {
-    background-color:var(--clr-white); 
-    padding-left:2rem ;
-    padding-right: 2rem;
-    padding-top: 2rem;
-    padding-bottom: 10rem;
-    width: 100%;
-    border-radius: 8px;
+.DashbD_head_container {
+  display: flex;
+  flex-wrap: wrap;
+  /* gap:1.5rem; */
+  width: 100%;
+  column-gap: 2.4rem;
+  row-gap: 2.4rem;
+  /* margin: 0px ; */
+  /* background-color: pink; */
 }
-.tableContainer{
+
+.dashboard_top {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.modal_overlay {
+  position: absolute;
+  z-index: 80;
+  right: 0px;
+  margin-top: 1rem;
+}
+
+.overViewContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 1.6rem;
+  /* border:1px solid yellow; */
+}
+
+.text_header {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  /* align-items: end; */
+}
+
+.date_Picker {
+  position: relative;
+}
+
+.tableContainerOuter {
+  background-color: var(--clr-white);
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 10rem;
+  width: 100%;
+  border-radius: 8px;
+}
+.tableContainer {
   overflow-x: auto;
-   border-top-left-radius: 0 !important;
-   background-clip: padding-box;
+  border-top-left-radius: 0 !important;
+  background-clip: padding-box;
 }
 
 .table {
@@ -20,16 +64,14 @@
   border-radius: 8px;
   overflow: hidden;
   width: 100%;
-   border: 1px solid #ddd;
-   background: #fbf8f8;
-    box-shadow: 1rem var(--darker-gray);
+  border: 1px solid #ddd;
+  background: #fbf8f8;
+  box-shadow: 1rem var(--darker-gray);
 }
 
-
 .tableheader {
- background-color:var(--main-theme);
-    color: var(--clr-white);
-
+  background-color: var(--main-theme);
+  color: var(--clr-white);
 }
 
 .thSmall {
@@ -39,19 +81,19 @@
 }
 
 .th {
-   padding: 1.2rem;
-    text-align: left;
-    gap: 1rem;
-    border-bottom: none;
-    border-top: none;
+  padding: 1.2rem;
+  text-align: left;
+  gap: 1rem;
+  border-bottom: none;
+  border-top: none;
 }
 
- .td {
-   padding: 1.2rem;
-    text-align: left;
-    gap: 1rem;
-    border-bottom: 0.1rem solid #ddd;
-    border-top: 0.1rem solid #ddd;
+.td {
+  padding: 1.2rem;
+  text-align: left;
+  gap: 1rem;
+  border-bottom: 0.1rem solid #ddd;
+  border-top: 0.1rem solid #ddd;
 }
 .status {
   padding: 4px 8px;
@@ -62,32 +104,32 @@
 }
 
 .completed {
-  background-color: #C3F9D5;
+  background-color: #c3f9d5;
   color: #065f46;
 }
 
 .rejected {
-  background-color: #FFC9C9;
+  background-color: #ffc9c9;
   color: #991b1b;
 }
 
 .inProgress {
-  background-color: #88AEF1;
+  background-color: #88aef1;
   color: #1e3a8a;
 }
 
 .failed {
-  background-color: #FF9ABA;
+  background-color: #ff9aba;
   color: #9d174d;
 }
 
 .assigned {
-  background-color: #FFEC8B;
+  background-color: #ffec8b;
   color: #78350f;
 }
-.returned{
-  background-color: #AFAFAF;
-  color:#414040;
+.returned {
+  background-color: #afafaf;
+  color: #414040;
 }
 .filters {
   display: flex;
@@ -103,20 +145,18 @@
   transition: all 0.2s ease;
 }
 .filters button:first-child {
-  border-top-left-radius: 8px; 
+  border-top-left-radius: 8px;
   width: 8rem;
-   
 }
 
 .filters button:last-child {
   border-top-right-radius: 8px;
 }
 
-
 .filterButton:hover {
-   background-color: var(--input-background);
-   border-color: #17654f;
-   border-bottom: none;
+  background-color: var(--input-background);
+  border-color: #17654f;
+  border-bottom: none;
 }
 
 .activeFilter {
@@ -126,51 +166,55 @@
   border-bottom: 4px solid rgb(56, 54, 54);
 }
 
+.overview {
+  color: var(--clr-black);
+  font-size: 1.8rem;
 
-.overview{
-    color: var(--clr-black);
-    font-size: 2em;
-    margin-left: 1rem;
-    font-weight: bold;
+  /* margin-left: 1rem; */
+  font-weight: bold;
 }
-.overviewtext{
-    font-size: 10px;
-    margin-left: 0.9rem;
-    margin-bottom: 1rem;
+.overviewtext {
+  font-size: 1.4rem;
+  color: rgba(0, 0, 0, 0.5);
+  /* margin-left: 0.9rem; */
+  /* margin-bottom: 1rem; */
 }
-.date__control{
-   align-items: center;
+.date__control {
+  display: flex;
+  align-items: center;
   justify-content: center;
-   padding: 0.8rem;
+  padding: 0.8rem;
   border-radius: 0.8rem;
   border: 0.1rem solid white;
-  /* width: 15rem; */
+  width: 23rem;
+  gap: 1rem;
   background-color: white;
-  
+  cursor: pointer;
+  transition: all 250ms ease-in-out;
 }
-.date__control:hover{
+.date__control:hover {
   background-color: var(--input-background);
   border-color: white;
 }
 
-
-.addorder{
-   border-radius: 1rem;
-    border: none; 
-    background-color: #065f46; 
-    color: white; 
-    padding: 0.8rem;  
-    width: 20rem;
-    position: relative;
+.addorder {
+  border-radius: 1rem;
+  border: none;
+  background-color: #065f46;
+  color: white;
+  padding: 0.8rem;
+  width: 20rem;
+  position: relative;
 }
-.addorder:hover{
-   background-color: #054231;
+.addorder:hover {
+  background-color: #054231;
   border-color: var(--main-theme);
 }
 .exportContainer {
   position: relative;
   display: inline-block;
 }
+
 
 
 .dropdownMenu {
@@ -202,7 +246,7 @@
 }
 
 .columnButton {
-  background-color:white;
+  background-color: white;
   color: var(--clr-black);
   border: 1px solid #e5e7eb;
   border-radius: 1rem;
@@ -210,10 +254,10 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-   width: 15rem;
+  width: 15rem;
   padding: 0.8rem;
 }
-.columnButton:hover{
+.columnButton:hover {
   background-color: var(--input-background);
   border-color: white;
 }
@@ -242,7 +286,7 @@
   font-size: 14px;
 }
 
-.checkboxItem input[type='checkbox'] {
+.checkboxItem input[type="checkbox"] {
   appearance: none;
   width: 16px;
   height: 16px;
@@ -254,13 +298,13 @@
   background-color: white;
 }
 
-.checkboxItem input[type='checkbox']:checked {
+.checkboxItem input[type="checkbox"]:checked {
   background-color: #065f46; /* green-500 */
   border-color: #065f46;
 }
 
-.checkboxItem input[type='checkbox']:checked::after {
-  content: '';
+.checkboxItem input[type="checkbox"]:checked::after {
+  content: "";
   position: absolute;
   top: 2px;
   left: 4px;
@@ -288,16 +332,16 @@
 }
 
 .tableRow:hover {
-   background-color: var(--input-background);
-   border: #054231;
+  background-color: var(--input-background);
+  border: #054231;
 }
 /* Add to Dashboard.module.css */
 input[type="checkbox"] {
   -webkit-appearance: none;
-   appearance: none;
+  appearance: none;
   width: 12px;
   height: 12px;
-  border: 1px solid #065f46 ;
+  border: 1px solid #065f46;
   border-radius: 3px;
   outline: none;
   cursor: pointer;
@@ -334,11 +378,10 @@ input[type="checkbox"]:checked::after {
   transition: background-color 0.2s;
 }
 
-
 /* Make sure header checkbox matches your green style */
 .th input[type="checkbox"] {
   -webkit-appearance: none;
-   appearance: none;
+  appearance: none;
   width: 12px;
   height: 12px;
   border: 1px solid #ccc;
@@ -361,4 +404,91 @@ input[type="checkbox"]:checked::after {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+/* -------------------------add modal style--------------------------------------------- */
+.addOrderPopUp {
+  position: absolute;
+  /* top: 100%; */
+  /* right: 0; */
+  background-color: white;
+  border: 1px solid #ddd;
+  /* border-radius: 0.5rem; */
+  /* padding: 0.5rem 0; */
+  width: 40rem;
+  /* height: 38rem; */
+  z-index: 90;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  /* margin-top: 0.5rem; */
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding:3rem;
+  border-radius: 1rem;
+  display: flex;
+  gap:1.2rem;
+  flex-direction: column;
+}
+
+.header{
+  color: #17654F;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.addOrderPopUp .selectors_container{
+  display: flex;
+  flex-direction: column;
+  gap:1rem;
+  
+}
+
+.addOrderPopUp .selectors_container button{
+  background-color: white;
+  border: 1px solid #17654F;
+  border-radius: 7px;
+  padding:5px;
+  cursor: pointer;
+  display: flex;
+  gap: 1rem;
+  padding-left: 1rem;
+  align-items: center;
+  color: #17654F;
+  transition: background-color 250ms ease-in-out;
+}
+
+.addOrderPopUp .selectors_container button:hover{
+  background-color: #D6E3E0;
+}
+.addOrderPopUp .selectors_container button img{
+  background-color: #17654F;
+  border-radius: 4px;
+  padding:3px
+}
+
+.addOrderPopUp .info_title{
+  color:#FF0554;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.addOrderPopUp .info{
+  color:#003627;
+  font-size: 1rem;
+}
+
+.addOrderPopUp ul{
+  list-style-type: disc;
+  list-style-position: inside;
+}
+
+.addOrderPopUp ul li::marker {
+  color: #003627;
+}
+
+.addOrderPopUp ul li{
+  margin-left: 1rem;
+
 }
