--- a/src/Pages/Dashboard/StatCard.module.css
+++ b/src/Pages/Dashboard/StatCard.module.css
@@ -1,63 +1,106 @@
 .card {
-  display: flex; 
-  align-items: center;
-  padding:0.5rem 1rem;
-  /* width: 25rem; */
+  width: 29rem;
+  height: 9rem;
+  padding: 1rem;
   border-radius: 0.75rem;
-  box-shadow: 0 4px 6px rgba(19, 19, 19, 0.1);
-  transition: transform 0.2s;
-  position: relative;
+
+transition: all 250ms ease-in-out;
+}
+.card_con_b {
+  display: grid;
+  align-items: flex-end;
+
+
+  grid-template-columns: 1.4fr 1fr;
+  /* padding: 0.1rem 1.2rem; */
+
+  /* height: 7.2rem; */
+  /* box-shadow: 0 4px 6px rgba(19, 19, 19, 0.1); */
+  transition: transform 6s ease;
+
+  /* position: relative; */
 }
 
+.card:hover{
+  box-shadow: 3px 9px 41px -21px var(--hover-color);
+-webkit-box-shadow: 3px 9px 41px -21px var(--hover-color);
+-moz-box-shadow: 3px 9px 41px -21px var(--hover-color);
+}
+/* .card:hover {
+  box-shadow: 30px 9px 28px -12px var(--hover-color);
+} */
 .card:hover {
   transform: translateY(-2px);
 }
 
 .iconWrapper {
-  border-radius: 15%;
+  border-radius:5px;
   border: 0.2px solid black;
   padding: 0.3rem;
   display: flex;
-  /* align-items: center; */
-  /* justify-content: center; */
-  margin-right: 0.7rem;
+
+  /* margin-right: 0.7rem; */
 }
 
 .icon {
-  font-size: 1em;
-  color: black;
+  width: 3.8rem;
+  /* font-size: 1em;
+  color: black; */
 }
 
 .info {
   display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .title {
-
-  position: absolute;
-  top: 5px;
-  left: 50px;
-  /* right: 4px; */
-  /* display: inline-block; */
-  font-size: 1em;
-  font-weight:400;
-  color:black;
+  /* position: absolute; */
+  /* top: 5px; */
+  /* left: 50px; */
+/* background-color: gainsboro; */
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: black;
+  
 }
 
 .value {
-  /* font-size: 1.2em; */
-   font-size: 2em;
+  /* background-color: aqua; */
+  font-size: 2.4rem;
+  font-weight: 500;
+  /* font-size: 2em;
   font-weight: bolder;
-  color: #1e293b;
+  color: #1e293b; */
+
+  font-size: 2.4rem;
+  /* font-style: normal; */
+  /* font-weight: 600; */
+  /* line-height: normal; */
+  color: black;
 }
 
 .change {
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 500;
-  color: #10b981;
-  margin-right: 0%;
-  margin-left: 5em;
-  margin-top: 1.3em;
 
 }
 
+.infotext {
+  display: flex;
+  /* align-items: center; */
+  flex-direction: column;
+
+  /* background-color: red; */
+  width: 100%;
+  height: 100%;
+
+}
+
+.infochange {
+  /* background-color: yellow; */
+  display: flex;
+  align-items: flex-end;
+
+  /* height: 100%; */
+}
